--- a/README
+++ b/README
@@ -4,6 +4,7 @@ chrome-new-tab-or-navigate is an extension for Google Chrome which alters the be
 
 When opening a new tab, and a duplicate tab exists in the same window, it closes the new tab and selects the duplicate tab. If there's no duplicate, the new tab is opened as usual.
 
-Only applies to new tabs--navigation within a single tab is not affected.
-
-Tabs in other windows are ignored.
+Notes and limitations:
+ * Only applies to new tabs--navigation within a single tab is not affected.
+ * Tabs in other windows are ignored.
+ * Does not handle redirects--the requested URL must match the duplicated page URL exactly to be considered a duplicate.
