--- a/README
+++ b/README
@@ -8,3 +8,5 @@ Notes and limitations:
  * Only applies to new tabs--navigation within a single tab is not affected.
  * Tabs in other windows are ignored.
  * Does not handle redirects--the requested URL must match the duplicated page URL exactly to be considered a duplicate.
+ * Contains no icons--submissions welcome!
+ * Does not auto-update
