--- a/README
+++ b/README
@@ -1,10 +1,13 @@
 chrome-duplicate-tab-detector
 
+Note: this extension is no longer maintained, as I no longer use Chrome.
+
 chrome-duplicate-tab-detector is an extension for Google Chrome which alters the behaviour of opening a new tab to help reduce duplicate tabs (tabs displaying the same URL).
 
 When opening a new tab, and a duplicate tab exists in the same window, it closes the new tab and selects the duplicate tab. If there's no duplicate, the new tab is opened as usual.
 
 Notes and limitations:
+ * Chrome manifest version 2
  * Only applies to new tabs--navigation within a single tab is not affected.
  * Tabs in other windows are ignored.
  * Does not handle redirects--the requested URL must match the duplicated page URL exactly to be considered a duplicate.
